# esp-idf-sensors-telemetry

./: CMakeLists.txt  README.md
components/lora/: lora.c
components/lora/include/: lora.h
components/mpu6050/: mpu6050.h
main/: CMakeLists.txt  main.c  main_weg.c
main/mqtt/: mqtt.c  mqtt.h
main/tx/: CMakeLists.txt  main.c
main/wifi/: wifi.h
